# PandoraLauncher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  cd.yml
crates/auth/: Cargo.toml
crates/auth/src/: authenticator.rs  constants.rs  credentials.rs  lib.rs  serve_redirect.rs
crates/backend/: Cargo.toml
crates/backend/src/: account.rs  backend.rs  backend_filesystem.rs  backend_handler.rs  directories.rs  install_content.rs  instance.rs  launch.rs  launch_wrapper.rs  lib.rs  log_reader.rs  mod_metadata.rs
crates/backend/src/metadata/: items.rs  manager.rs
crates/backend/src/modrinth/: data.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: install.rs  instance.rs  keep_alive.rs  lib.rs  message.rs  meta.rs  modal_action.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  png_render_cache.rs  root.rs  ui.rs
crates/frontend/src/component/: error_alert.rs  instance_dropdown.rs  instance_list.rs  mod.rs  progress_bar.rs  search_helper.rs
crates/frontend/src/entity/: account.rs  instance.rs  metadata.rs  modrinth.rs  version.rs
crates/frontend/src/game_output/: mod.rs
crates/frontend/src/modals/: generic.rs  mod.rs  modrinth_install.rs  settings.rs
crates/frontend/src/pages/: instances_page.rs  modrinth_page.rs  syncing_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  mods_subpage.rs  quickplay_subpage.rs  settings_subpage.rs
crates/nbt/src/: reference.rs
crates/nbt/src/stringified/: from_snbt.rs
crates/pandora_launcher/: Cargo.toml  build.rs
crates/pandora_launcher/src/: main.rs  panic.rs
crates/reqwest_client/src/: reqwest_client.rs
crates/schema/: Cargo.toml
crates/schema/src/: fabric_launch.rs  fabric_loader_manifest.rs  forge.rs  instance.rs  java_runtimes.rs  loader.rs  maven.rs  modrinth.rs  version_manifest.rs
package/: create_icns.sh  create_ico.sh  mac.icns
scripts/: build_linux.sh  build_mac.sh  build_windows.sh
